# ptm-rl

./: .gitignore  CHANGELOG.md  FILE_MANIFEST.txt  FILE_MANIFEST_PHASE2.txt  FILE_MANIFEST_PHASE3.txt  HANDOFF_TO_XIAOA.md  PHASE1_COMPLETION_REPORT.md  PHASE2_HANDOFF.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_STEP2.5_GYMNASIUM_MIGRATION.md  README.md  SYSTEMATIC_DIAGNOSIS.md  WORK_STATUS_20260325.md  debug_div_B.py  debug_laplacian_detail.py  debug_solovev_omega.py  derive_divergence.py  diagnose_level2_init.py  diagnose_level3_simple_ic.py  diagnose_operators.py  grid_convergence_results.txt  pyproject.toml  requirements.txt  run_diagnostics_tests.py  verify_B_formula.py  verify_large_grid.py
.learnings/: v3.0-github-workflow-lessons.md
design/: ARCHITECTURE.md  M1_architecture_design.md
docs/: API.md  API_V1.2.md  BRANCHING_STRATEGY.md  DEPRECATION_PLAN_POISSON_SOLVER.md  ENERGY-DISSIPATION-FINAL-REPORT.md  ENERGY-DISSIPATION-ROOT-CAUSE.md  ENERGY_BUG_ROOT_CAUSE.md  ENERGY_BUG_ROOT_CAUSE_UPDATED.md  FREEGS_VALIDATION_NOTE.md  HANDOFF_XIAOP_TO_XIAOA.md  MIGRATION_V1.0_TO_V1.2.md  PHASE_5A_PHYSICS_VALIDATION_REPORT.md  PHASE_5A_SUMMARY_FOR_XIAOP.md  PHYS01_FIX_REPORT.md  POISSON_SOLVER_VALIDATION_REPORT.md  README.md  ROADMAP_V2.md  V1.2_BENCHMARK_REPORT.md  V1.3_COMPLETION_REPORT.md  V1.3_KNOWN_LIMITATIONS.md  energy-budget-fix.md  energy-dissipation-derivation.md  force_balance_implementation.md  phase3_implementation_report.md  phase4_training_report.md  phase5_rl_validation_report.md  poisson_toroidal_usage.md  v1.3-known-issues.md  (+4 more)
(+382 files in other folders)
